fixed slideshow size. Picture not blurry anymore. also fixed spotlight to correct spot on screen

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -23,7 +23,8 @@ body {
 
 
 .d-block {
-    height:600px;
+    height:920px;
+    object-fit: cover;
 }
 
 
@@ -274,21 +275,21 @@ body {
 .spotlight-content {
     position: absolute;
     bottom: 50%;
-    width: 60%;
-    transform: translateX(-50%);
-    left:400px;
+    width: 70%;
+    
 }
 
 .spotlight-overlay{
     background: rgba(0, 0, 0, 0.5);
     position: absolute;
-    left: 200px;
-    transform: translateY(-50%);
-    padding: 50px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 100px;
 }
 
 .spotlight-text h1 {
-    font-size: 46px;
+    font-size: 72px;
     font-weight: 800;
     color: #fff;
 }
